[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lyz", email = "lyz@riseup.net"},
]
dependencies = [
    "mkdocs",
    "proselint",
    "gitdb2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-material",
    "mkdocs-section-index",
    "pymdown-extensions",
    "mkdocs-newsletter",
    "mkdocs-autolinks-plugin>=0.5.0",
    "mkdocs-exclude-search>=0.6.4",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
